fix(identity-service): resolve SonarQube code smells (4/7, 3 false positives)
- User.java / UserService.java: OffsetDateTime.now() -> now(ZoneOffset.UTC)
  for audit timestamps (createdAt/deletedAt), explicit per S8688.
- JwtService.java: Instant.now() -> now(Clock.systemUTC()) in both token
  generators, same rule, reusing the Clock.systemUTC() idiom already used
  by LoginThrottle.java.
- UserService.findAll(): Collectors.toList() -> toList() (S6204) — verified
  the only caller (UserController) never mutates the returned list.

Left unchanged (S125 "commented-out code", 3 occurrences): PaymentServiceClient
and two integration tests flagged for prose comments explaining test/error-path
rationale, not dead code — Sonar's heuristic false-positived on code-like
tokens in the comment text.